2008-11-08  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.cpp: Convert #warnings to FIXMEs.

2008-11-04  Al Riddoch  <alriddoch@googlemail.com>

	* configure.ac: Added AC_PROG_CXX as it is required to set up the
	  C++ compiler correctly.

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* NEWS: Update news.

	* Release 0.2.6

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* mercator.spec.in: Remove packager tag, as it should be
	  set in the packagers macros.

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.cpp: When created a new Segment, apply existing
	  mods now that we actually store them in the right place.

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Segment.cpp, Mercator/Segment.h: Make
	  Segment::clipToSegment() public as it's useful, and const as
	  it should be.

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.cpp, Mercator/Segment.cpp: Redefine the x and y
	  reference for the terrain to be in world coords, not grid offset,
	  to simplify the arithmetic considerably.

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.h: Accompany each stored mod with information
	  about its bbox at the time it was added, so we can more effectively
	  move it around.

	* Mercator/Terrain.cpp: Implement moving mods around more effectively.

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.h: Accompany each stored area with information
	  about its bbox at the time it was added, so we can more effectively
	  move it around.

	* Mercator/Terrain.cpp: Implement moving areas around more
	  effectively.

2008-08-13  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Segment.cpp, Mercator/Segment.h: Remove code that handled
	  ownership of allocated terrain mods, as Terrain now owns them.
	  Implement API for removing an individual TerrainMod. Convert
	  storage over to a set for easy removal.
