@@ -1,3 +1,8 @@
+2008-11-09  Al Riddoch  <alriddoch@googlemail.com>
+
+	* tests/testForest.cpp, tests/testPlant.cpp: Force debug mode before
+	  including asserts so checks are always run.
+
 2008-11-08  Al Riddoch  <alriddoch@googlemail.com>
 
 	* Mercator/Terrain.cpp: Convert #warnings to FIXMEs.
